--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,92 +1,6 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.amardeep.simpleplayer.component.service.activity.SongListActivity" >
-
-    <ListView
-        android:id="@+id/music_list"
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4" >
-    </ListView>
-
-    <LinearLayout
-        android:id="@+id/now_playing_root"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.65"
-        android:background="@drawable/background"
-        android:orientation="horizontal" >
-
-        <LinearLayout
-            android:id="@+id/now_playing_layout"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical" >
-
-            <TextView
-                android:id="@+id/now_playing_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/now_playing"
-                android:textSize="17sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/now_playing_artist"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/now_playing"
-                android:textSize="17sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/now_playing_button_layout"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="horizontal" >
-
-            <ImageView
-                android:id="@+id/previous_song"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/previous_song"
-                  android:paddingTop="@dimen/activity_vertical_margin"
-                  android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:src="@drawable/ic_skip_previous_black_24dp" >
-            </ImageView>
-
-            <ImageView
-                android:id="@+id/play_pause_toggle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/play_pause_toggle"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:src="@drawable/ic_pause_black_24dp" >
-            </ImageView>
-
-            <ImageView
-                android:id="@+id/next_song"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/next_song"
-                  android:paddingTop="@dimen/activity_vertical_margin"
-                  android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:src="@drawable/ic_skip_next_black_24dp" >
-            </ImageView>
-        </LinearLayout>
-
-    </LinearLayout>
-
-</LinearLayout>
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/pager"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" />
