--- a/res/layout-land-mdpi/activity_song_controller_activity.xml
+++ b/res/layout-land-mdpi/activity_song_controller_activity.xml
@@ -9,12 +9,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" >
+		 <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.2"
+            android:orientation="horizontal" 
+            android:background="#55000000">
 
+            <ImageView
+                android:id="@+id/equalizer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="19dp"
+                android:clickable="true"
+                android:src="@drawable/ic_equalizer_white_24dp" />
+
+        </RelativeLayout>
         <ImageView
             android:id="@+id/album_art_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.7"
+            android:layout_weight="0.5"
             android:contentDescription="@string/song_view" />
 
         <View
@@ -26,7 +43,7 @@
             android:id="@+id/song_info"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1.00"
+            android:layout_weight="0.90"
             android:orientation="vertical" >
 
             <TextView
