--- a/res/layout/activity_song_controller_activity.xml
+++ b/res/layout/activity_song_controller_activity.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.amardeep.simpleplayer.component.activity.SongControllerActivy" >
 
     <LinearLayout
@@ -12,11 +11,30 @@
         android:layout_height="match_parent"
         android:orientation="vertical" >
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.3"
+            android:orientation="horizontal" 
+            android:background="#55000000">
+
+            <ImageView
+                android:id="@+id/equalizer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="19dp"
+                android:clickable="true"
+                android:src="@drawable/ic_equalizer_white_24dp" />
+
+        </RelativeLayout>
+
         <ImageView
             android:id="@+id/album_art_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2.5"
+            android:layout_weight="2.0"
             android:contentDescription="@string/song_view" />
 
         <View
